--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>University of Middle-Earth</title>
     <link rel="stylesheet" href="/assets/vendors.css">
+    <title>University of Middle-Earth</title>
 </head>
 
 <body>
