--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>University of Middle-Earth</title>
+    <title>School of Hogwarts Witchcraft and Wizardry</title>
 </head>
 
 <body>
+    <div class="container-fluid bg-light d-none d-md-block pt-4 pb-3">
+        <div class="container">
+            <header class="header">
+                <div class="media">
+                    <img src="./img/university-logo.jpg" alt="University logo" class="align-self-center mr-3 logo">
+                    <div class="media-body align-self-center">
+                        <h1 class="mb-0 title">School of Hogwarts
+                            <br>Witchcraft and Wizardry</h1>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </div>
 
+    <div class="container-fluid bg-dark">
+        <div class="container">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-md px-0">
+                <a class="navbar-brand d-md-none" href="#">
+                    <img src="./img/university-logo.jpg" width="40" height="40" alt="Unversity logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar-content" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="nav-bar-content">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Courses</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">Houses</a>
+                            <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                                <a class="dropdown-item" href="#">Gryffindor</a>
+                                <a class="dropdown-item" href="#">Hufflepuff</a>
+                                <a class="dropdown-item" href="#">Ravenclaw</a>
+                                <a class="dropdown-item" href="#">Slytherin</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-express" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">Hogwarts Express</a>
+                            <div class="dropdown-menu" aria-labelledby="nav-bar-express">
+                                <a class="dropdown-item" href="#">Timetable</a>
+                                <a class="dropdown-item" href="#">Route Network</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <ur class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                    </ur>
+                </div>
+            </nav>
+        </div>
+    </div>
 </body>
 
 </html>
