--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>School of Hogwarts Witchcraft and Wizardry</title>
+    <title>Lorem Ipsum Institute of Technolgoy</title>
 </head>
 
-<body>
-    <div class="container-fluid bg-light d-none d-md-block pt-4 pb-3">
+<body class="bg-light">
+    <div class="container-fluid d-none d-md-block mt-4 mb-3">
         <div class="container">
             <header class="header">
                 <div class="media">
-                    <img src="./img/university-logo.jpg" alt="University logo" class="align-self-center mr-3 logo">
+                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
                     <div class="media-body align-self-center">
-                        <h1 class="mb-0 title">School of Hogwarts
-                            <br>Witchcraft and Wizardry</h1>
+                        <h1 class="mb-0 title">Lorem Ipsum
+                            <br>Institute of Technology</h1>
                     </div>
                 </div>
             </header>
@@ -27,7 +27,7 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-dark navbar-expand-md px-0">
                 <a class="navbar-brand d-md-none" href="#">
-                    <img src="./img/university-logo.jpg" width="40" height="40" alt="Unversity logo">
+                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar-content" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -36,29 +36,45 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                            <a class="nav-link" href="/">Homepage
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Courses</a>
+                            <a class="nav-link" href="#">The institute
+                                <span class="sr-only">(current)</span>
+                            </a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Houses</a>
+                                aria-expanded="false">Faculties</a>
                             <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
-                                <a class="dropdown-item" href="#">Gryffindor</a>
-                                <a class="dropdown-item" href="#">Hufflepuff</a>
-                                <a class="dropdown-item" href="#">Ravenclaw</a>
-                                <a class="dropdown-item" href="#">Slytherin</a>
+                                <a class="dropdown-item" href="#">Applied sciences</a>
+                                <a class="dropdown-item" href="#">Architecture & planning</a>
+                                <a class="dropdown-item" href="#">Construction & environment</a>
+                                <a class="dropdown-item" href="#">Design</a>
+                                <a class="dropdown-item" href="#">Engineering</a>
+                                <a class="dropdown-item" href="#">Health & social sciences</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">Education & research</a>
+                            <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                                <a class="dropdown-item" href="#">Overview</a>
+                                <a class="dropdown-item" href="#">Bachelor</a>
+                                <a class="dropdown-item" href="#">Master</a>
+                                <a class="dropdown-item" href="#">Continuing education</a>
+                                <a class="dropdown-item" href="#">Doctorate</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-express" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Hogwarts Express</a>
+                                aria-expanded="false">Industry</a>
                             <div class="dropdown-menu" aria-labelledby="nav-bar-express">
-                                <a class="dropdown-item" href="#">Timetable</a>
-                                <a class="dropdown-item" href="#">Route Network</a>
+                                <a class="dropdown-item" href="#">Public relations</a>
+                                <a class="dropdown-item" href="#">Commercialization</a>
+                                <a class="dropdown-item" href="#">Sponsors & partners</a>
                             </div>
                         </li>
                     </ul>
@@ -71,6 +87,105 @@
             </nav>
         </div>
     </div>
+
+    <main class="container mb-4">
+        <div class="row no-gutters">
+            <div class="col-12 col-lg-6">
+                <section class="p-4 mt-3 mr-3 bg-white news">
+                    <h2 class="text-primary mb-4">News & events</h2>
+                    <ul class="list-unstyled">
+                        <li class="media pb-4">
+                            <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
+                            <div class="media-body">
+                                <h3 class="text-info mt-0 mb-2">
+                                    <a href="#"> Respondeat totidem verbis</a>
+                                </h3>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. An me, inquam, nisi te audire vellem, censes haec dicturum fuisse?
+                                Quid est, quod ab ea absolvi et perfici debeat?
+                                <div class="mt-3 text-secondary text-right date">2018/01/15</div>
+                            </div>
+                        </li>
+                        <li class="media pb-4">
+                            <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
+                            <div class="media-body">
+                                <h3 class="text-info mt-0 mb-2">
+                                    <a href="#">At iam decimum annum in spelunca iacet</a>
+                                </h3>
+                                Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
+                                dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
+                                <div class="mt-3 text-secondary text-right date">2018/01/02</div>
+                            </div>
+                        </li>
+                        <li class="media pb-4">
+                            <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
+                            <div class="media-body">
+                                <h3 class="text-info mt-0 mb-2">
+                                    <a href="#">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
+                                </h3>
+                                Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
+                                res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute.
+                                <div class="mt-3 text-secondary text-right date">2017/12/30</div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-12 col-lg-6">
+                <section class="p-4 mt-3 mr-3 bg-white studies">
+                    <h2 class="text-primary mb-4">Studies</h2>
+                    <p class="font-weight-bold">Advance your scientific education</p>
+                    <ul class="list-unstyled ml-3">
+                        <li>
+                            <a href="#">Bachelor programmes</a>
+                        </li>
+                        <li>
+                            <a href="#">Master programmes</a>
+                        </li>
+                        <li>
+                            <a href="#">Continuing education programmes</a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="p-4 mt-3 mr-3 bg-white researches">
+                    <h2 class="text-primary mb-4">Researches</h2>
+                    <p class="font-weight-bold">Join our renowned research groups</p>
+                    <p class="ml-3">
+                        <a href="#">Doctorial programmes</a>
+                    </p>
+                    <p class="font-weight-bold">Latest publications</p>
+                    <ul class="list-unstyled ml-3">
+                        <li>
+                            <a href="#">Tuo vero id quidem, inquam, arbitratu</a>
+                        </li>
+                        <li>
+                            <a href="#">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
+                        </li>
+                        <li>
+                            <a href="#">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
+                        </li>
+                        <li>
+                            <a href="#">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
+                                hominem, ut frueretur voluptatibus</a>
+                        </li>
+                    </ul>
+
+                </section>
+            </div>
+        </div>
+    </main>
+
+    <div class="container-fluid bg-dark">
+        <footer class="container text-center py-3">
+            <div class="row mx-5 justify-content-around">
+                <a class="mr-3 text-white" href="#">About</a>
+                <a class="mr-3 text-white" href="#">Contact us</a>
+                <a class="mr-3 text-white" href="#">Help</a>
+                <a class="mr-3 text-white" href="#">Terms of service</a>
+                <a class="mr-3 text-white" href="#">Privacy policy</a>
+            </div>
+        </footer>
+    </div>
+
 </body>
 
 </html>
