--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                 </section>
             </div>
             <div class="col-12 col-lg-6">
-                <section class="p-4 mt-3 mr-3 bg-white studies">
+                <section class="p-4 mt-3 bg-white studies">
                     <h2 class="text-primary mb-4">Studies</h2>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
@@ -146,7 +146,8 @@
                         </li>
                     </ul>
                 </section>
-                <section class="p-4 mt-3 mr-3 bg-white researches">
+
+                <section class="p-4 mt-3 bg-white researches">
                     <h2 class="text-primary mb-4">Researches</h2>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
