Fixed index rendering bugs

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">The institute
-                                <span class="sr-only">(current)</span>
-                            </a>
+                            <a class="nav-link" href="#">The institute</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -94,7 +92,7 @@
                 <section class="p-4 mt-3 mr-3 bg-white news">
                     <h2 class="text-primary mb-4">News & events</h2>
                     <ul class="list-unstyled">
-                        <li class="media pb-4">
+                        <li class="media mt-4">
                             <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
                             <div class="media-body">
                                 <h3 class="text-info mt-0 mb-2">
@@ -102,10 +100,10 @@
                                 </h3>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. An me, inquam, nisi te audire vellem, censes haec dicturum fuisse?
                                 Quid est, quod ab ea absolvi et perfici debeat?
-                                <div class="mt-3 text-secondary text-right date">2018/01/15</div>
+                                <div class="my-3 text-secondary text-right date">2018/01/15</div>
                             </div>
                         </li>
-                        <li class="media pb-4">
+                        <li class="media mt-4">
                             <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
                             <div class="media-body">
                                 <h3 class="text-info mt-0 mb-2">
@@ -113,10 +111,10 @@
                                 </h3>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
                                 dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
-                                <div class="mt-3 text-secondary text-right date">2018/01/02</div>
+                                <div class="my-3 text-secondary text-right date">2018/01/02</div>
                             </div>
                         </li>
-                        <li class="media pb-4">
+                        <li class="media mt-4">
                             <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
                             <div class="media-body">
                                 <h3 class="text-info mt-0 mb-2">
@@ -124,7 +122,7 @@
                                 </h3>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
                                 res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute.
-                                <div class="mt-3 text-secondary text-right date">2017/12/30</div>
+                                <div class="my-3 text-secondary text-right date">2017/12/30</div>
                             </div>
                         </li>
                     </ul>
