Updated index semantic tags

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body class="bg-light">
-    <div class="container-fluid d-none d-md-block mt-4 mb-3">
+    <header class="container-fluid d-none d-md-block mt-4 mb-3 header">
         <div class="container">
-            <header class="header">
+            <div>
                 <div class="media">
                     <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
                     <div class="media-body align-self-center">
@@ -19,13 +19,13 @@
                             <br>Institute of Technology</h1>
                     </div>
                 </div>
-            </header>
+            </div>
         </div>
-    </div>
+    </header>
 
-    <div class="container-fluid bg-dark">
+    <nav class="container-fluid bg-dark">
         <div class="container">
-            <nav class="navbar navbar-dark bg-dark navbar-expand-md px-0">
+            <div class="container navbar navbar-dark bg-dark navbar-expand-md px-0">
                 <a class="navbar-brand d-md-none" href="#">
                     <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
                 </a>
@@ -48,16 +48,16 @@
                                 aria-expanded="false">Faculties</a>
                             <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
                                 <a class="dropdown-item" href="#">Applied sciences</a>
-                                <a class="dropdown-item" href="#">Architecture & planning</a>
-                                <a class="dropdown-item" href="#">Construction & environment</a>
+                                <a class="dropdown-item" href="#">Architecture &amp; planning</a>
+                                <a class="dropdown-item" href="#">Construction &amp; environment</a>
                                 <a class="dropdown-item" href="#">Design</a>
                                 <a class="dropdown-item" href="#">Engineering</a>
-                                <a class="dropdown-item" href="#">Health & social sciences</a>
+                                <a class="dropdown-item" href="#">Health &amp; social sciences</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Education & research</a>
+                                aria-expanded="false">Education &amp; research</a>
                             <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
                                 <a class="dropdown-item" href="#">Overview</a>
                                 <a class="dropdown-item" href="#">Bachelor</a>
@@ -68,11 +68,11 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-express" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">Industry</a>
+                                aria-expanded="false">Industry &amp; partners</a>
                             <div class="dropdown-menu" aria-labelledby="nav-bar-express">
                                 <a class="dropdown-item" href="#">Public relations</a>
                                 <a class="dropdown-item" href="#">Commercialization</a>
-                                <a class="dropdown-item" href="#">Sponsors & partners</a>
+                                <a class="dropdown-item" href="#">Sponsors &amp; partners</a>
                             </div>
                         </li>
                     </ul>
@@ -82,15 +82,15 @@
                         </li>
                     </ur>
                 </div>
-            </nav>
+            </div>
         </div>
-    </div>
+    </nav>
 
     <main class="container mb-4">
         <div class="row no-gutters">
-            <div class="col-12 col-lg-6">
-                <section class="p-4 mt-3 mr-3 bg-white news">
-                    <h2 class="text-primary mb-4">News & events</h2>
+            <section class="col-12 col-lg-6 news">
+                <div class="p-4 mt-3 mr-3 bg-white">
+                    <h2 class="text-primary mb-4">News &amp; events</h2>
                     <ul class="list-unstyled">
                         <li class="media mt-4">
                             <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
@@ -126,8 +126,8 @@
                             </div>
                         </li>
                     </ul>
-                </section>
-            </div>
+                </div>
+            </section>
             <div class="col-12 col-lg-6">
                 <section class="p-4 mt-3 bg-white studies">
                     <h2 class="text-primary mb-4">Studies</h2>
@@ -173,17 +173,17 @@
         </div>
     </main>
 
-    <div class="container-fluid bg-dark">
-        <footer class="container text-center py-3">
-            <div class="row mx-5 justify-content-around">
-                <a class="mr-3 text-white" href="#">About</a>
-                <a class="mr-3 text-white" href="#">Contact us</a>
-                <a class="mr-3 text-white" href="#">Help</a>
-                <a class="mr-3 text-white" href="#">Terms of service</a>
-                <a class="mr-3 text-white" href="#">Privacy policy</a>
+    <footer class="container-fluid bg-dark">
+        <div class="container text-center py-3">
+            <div class="row justify-content-around">
+                <a class="col-12 col-md mr-3 text-white" href="#">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="#">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="#">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="#">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="#">Privacy policy</a>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
 </body>
 
