--- a/src/login.html
+++ b/src/login.html
@@ -34,9 +34,7 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/">Homepage
-                                <span class="sr-only">(current)</span>
-                            </a>
+                            <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">The institute</a>
@@ -76,7 +74,9 @@
                     </ul>
                     <ur class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/login.html">Login</a>
+                            <a class="nav-link" href="/login.html">Login
+                                <span class="sr-only">(current)</span>
+                            </a>
                         </li>
                     </ur>
                 </div>
@@ -86,88 +86,49 @@
 
     <main class="container mb-4 main">
         <div class="row no-gutters">
-            <section class="col-12 col-lg-6 news">
-                <div class="p-4 mt-3 mr-lg-3 bg-white">
-                    <h2 class="text-primary mb-4">News &amp; events</h2>
-                    <ul class="list-unstyled">
-                        <li class="media mt-4">
-                            <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
-                            <div class="media-body">
-                                <h3 class="text-info mt-0 mb-2">
-                                    <a href="#"> Respondeat totidem verbis</a>
-                                </h3>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. An me, inquam, nisi te audire vellem, censes haec dicturum fuisse?
-                                Quid est, quod ab ea absolvi et perfici debeat?
-                                <div class="my-3 text-secondary text-right date">2018/01/15</div>
-                            </div>
-                        </li>
-                        <li class="media mt-4">
-                            <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
-                            <div class="media-body">
-                                <h3 class="text-info mt-0 mb-2">
-                                    <a href="#">At iam decimum annum in spelunca iacet</a>
-                                </h3>
-                                Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
-                                dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
-                                <div class="my-3 text-secondary text-right date">2018/01/02</div>
-                            </div>
-                        </li>
-                        <li class="media mt-4">
-                            <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
-                            <div class="media-body">
-                                <h3 class="text-info mt-0 mb-2">
-                                    <a href="#">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
-                                </h3>
-                                Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
-                                res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute.
-                                <div class="my-3 text-secondary text-right date">2017/12/30</div>
-                            </div>
-                        </li>
-                    </ul>
+            <section class="col-12 col-md-6 col-lg-5 login">
+                <div class="p-4 mt-3 mr-md-3 bg-white">
+                    <h2>Login</h2>
+                    <form>
+                        <div class="form-group">
+                            <label for="login-email">Email address</label>
+                            <input type="email" class="form-control" id="login-email" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="login-password">Password</label>
+                            <input type="password" class="form-control" id="login-password" placeholder="Enter password">
+                        </div>
+                        <div class="form-row justify-content-between align-items-center">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                            <a class="text-danger ml-auto" href="#">Forget password</a>
+                        </div>
+                    </form>
                 </div>
             </section>
-            <div class="col-12 col-lg-6">
-                <section class="p-4 mt-3 bg-white studies">
-                    <h2 class="text-primary mb-4">Studies</h2>
-                    <p class="font-weight-bold">Advance your scientific education</p>
-                    <ul class="list-unstyled ml-3">
-                        <li>
-                            <a href="#">Bachelor programmes</a>
-                        </li>
-                        <li>
-                            <a href="#">Master programmes</a>
-                        </li>
-                        <li>
-                            <a href="#">Continuing education programmes</a>
-                        </li>
-                    </ul>
-                </section>
-
-                <section class="p-4 mt-3 bg-white researches">
-                    <h2 class="text-primary mb-4">Researches</h2>
-                    <p class="font-weight-bold">Join our renowned research groups</p>
-                    <p class="ml-3">
-                        <a href="#">Doctorial programmes</a>
-                    </p>
-                    <p class="font-weight-bold">Latest publications</p>
-                    <ul class="list-unstyled ml-3">
-                        <li>
-                            <a href="#">Tuo vero id quidem, inquam, arbitratu</a>
-                        </li>
-                        <li>
-                            <a href="#">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
-                        </li>
-                        <li>
-                            <a href="#">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
-                        </li>
-                        <li>
-                            <a href="#">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
-                                hominem, ut frueretur voluptatibus</a>
-                        </li>
-                    </ul>
-
-                </section>
-            </div>
+            <section class="col-12 col-md-6 col-lg-7 register">
+                <div class="p-4 mt-3 bg-white">
+                    <h2>New Account</h2>
+                    <form>
+                        <div class="form-group">
+                            <label for="register-first-name">First name</label>
+                            <input type="text" class="form-control" id="register-first-name" placeholder="Enter first name">
+                        </div>
+                        <div class="form-group">
+                            <label for="register-last-name">Last name</label>
+                            <input type="text" class="form-control" id="register-last-name" placeholder="Enter last name">
+                        </div>
+                        <div class="form-group">
+                            <label for="register-email">Email address</label>
+                            <input type="email" class="form-control" id="register-email" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="register-password">Password</label>
+                            <input type="password" class="form-control" id="register-password" placeholder="Enter password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </form>
+                </div>
+            </section>
         </div>
     </main>
 
