--- a/src/login.html
+++ b/src/login.html
@@ -14,8 +14,9 @@
             <div class="media">
                 <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
                 <div class="media-body align-self-center">
-                    <h1 class="mb-0 title">Lorem Ipsum
-                        <br>Institute of Technology</h1>
+                    <div class="mb-0 title">Lorem Ipsum
+                        <br>Institute of Technology
+                    </div>
                 </div>
             </div>
         </div>
@@ -33,7 +34,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item">
@@ -42,39 +43,68 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
-                            <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
-                                <a class="dropdown-item" href="#">Applied sciences</a>
-                                <a class="dropdown-item" href="#">Architecture &amp; planning</a>
-                                <a class="dropdown-item" href="#">Construction &amp; environment</a>
-                                <a class="dropdown-item" href="#">Design</a>
-                                <a class="dropdown-item" href="#">Engineering</a>
-                                <a class="dropdown-item" href="#">Health &amp; social sciences</a>
-                            </div>
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                                <li>
+                                    <a class="dropdown-item" href="#">Applied sciences</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Architecture &amp; planning</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Construction &amp; environment</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Design</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Engineering</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Health &amp; social sciences</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Education &amp; research</a>
-                            <div class="dropdown-menu" aria-labelledby="nav-bar-houses">
-                                <a class="dropdown-item" href="#">Overview</a>
-                                <a class="dropdown-item" href="#">Bachelor</a>
-                                <a class="dropdown-item" href="#">Master</a>
-                                <a class="dropdown-item" href="#">Continuing education</a>
-                                <a class="dropdown-item" href="#">Doctorate</a>
-                            </div>
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                                <li>
+                                    <a class="dropdown-item" href="#">Overview</a>
+                                </li>
+
+                                <li>
+                                    <a class="dropdown-item" href="#">Bachelor</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Master</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Continuing education</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Doctorate</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-express" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Industry &amp; partners</a>
-                            <div class="dropdown-menu" aria-labelledby="nav-bar-express">
-                                <a class="dropdown-item" href="#">Public relations</a>
-                                <a class="dropdown-item" href="#">Commercialization</a>
-                                <a class="dropdown-item" href="#">Sponsors &amp; partners</a>
-                            </div>
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-express">
+                                <li>
+                                    <a class="dropdown-item" href="#">Public relations</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Commercialization</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Sponsors &amp; partners</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <ur class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/login.html">Login
+                            <a class="nav-link active" href="/login.html">Login
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
@@ -84,11 +114,11 @@
         </div>
     </nav>
 
-    <main class="container mb-4 main">
+    <main class="container main mt-4">
         <div class="row no-gutters">
             <section class="col-12 col-md-6 col-lg-5 login">
-                <div class="p-4 mt-3 mr-md-3 bg-white">
-                    <h2>Login</h2>
+                <div class="p-4 mr-md-3 bg-white">
+                    <h1 class="text-primary mb-4">Login</h1>
                     <form>
                         <div class="form-group">
                             <label for="login-email">Email address</label>
@@ -106,16 +136,18 @@
                 </div>
             </section>
             <section class="col-12 col-md-6 col-lg-7 register">
-                <div class="p-4 mt-3 bg-white">
-                    <h2>New Account</h2>
+                <div class="p-4 bg-white">
+                    <h1 class="text-primary mb-4">Create new account</h1>
                     <form>
-                        <div class="form-group">
-                            <label for="register-first-name">First name</label>
-                            <input type="text" class="form-control" id="register-first-name" placeholder="Enter first name">
-                        </div>
-                        <div class="form-group">
-                            <label for="register-last-name">Last name</label>
-                            <input type="text" class="form-control" id="register-last-name" placeholder="Enter last name">
+                        <div class="form-row">
+                            <div class="form-group col-12 col-lg-6">
+                                <label for="register-first-name">First name</label>
+                                <input type="text" class="form-control" id="register-first-name" placeholder="Enter first name">
+                            </div>
+                            <div class="form-group col-12 col-lg-6">
+                                <label for="register-last-name">Last name</label>
+                                <input type="text" class="form-control" id="register-last-name" placeholder="Enter last name">
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="register-email">Email address</label>
@@ -125,6 +157,24 @@
                             <label for="register-password">Password</label>
                             <input type="password" class="form-control" id="register-password" placeholder="Enter password">
                         </div>
+                        <div class="form-group">
+                            <label for="register-address">Address</label>
+                            <input type="text" class="form-control" id="register-addresss" placeholder="Enter address">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-12 col-lg-6">
+                                <label for="register-city">City</label>
+                                <input type="text" class="form-control" id="register-city" placeholder="Enter city">
+                            </div>
+                            <div class="form-group col-12 col-lg-4">
+                                <label for="register-state">State</label>
+                                <input type="text" class="form-control" id="register-state" placeholder="Enter state">
+                            </div>
+                            <div class="form-group col-12 col-lg-2">
+                                <label for="register-zip">Zip</label>
+                                <input type="text" class="form-control" id="register-zip" placeholder="Enter zip">
+                            </div>
+                        </div>
                         <button type="submit" class="btn btn-primary">Register</button>
                     </form>
                 </div>
@@ -132,8 +182,8 @@
         </div>
     </main>
 
-    <footer class="container-fluid bg-dark footer">
-        <div class="container text-center py-3">
+    <footer class="container-fluid bg-dark mt-4 footer">
+        <div class="container text-center py-4">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="#">About</a>
                 <a class="col-12 col-md mr-3 text-white" href="#">Contact us</a>
