--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,7 @@
     <title>Lorem Ipsum Institute of Technolgoy</title>
 </head>
 
-<body class="bg-light">
+<body class="d-flex flex-column bg-light">
     <header class="container-fluid d-none d-lg-block mt-4 mb-3 header">
         <div class="container">
             <div class="media">
@@ -38,29 +38,26 @@
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">The institute</a>
+                            <a class="nav-link" href="/empty.html?title=The+institue">The institute</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
                                 <li>
-                                    <a class="dropdown-item" href="#">Applied sciences</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Architecture &amp; planning</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Architecture+%26+planning">Architecture &amp; planning</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Construction &amp; environment</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Construction+%26+environment">Construction &amp; environment</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Design</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Engineering">Engineering</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Engineering</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Health &amp; social sciences</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Health+%26+social+sciences">Health &amp; social sciences</a>
                                 </li>
                             </ul>
                         </li>
@@ -69,20 +66,16 @@
                                 aria-expanded="false">Education &amp; research</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
                                 <li>
-                                    <a class="dropdown-item" href="#">Overview</a>
-                                </li>
-
-                                <li>
-                                    <a class="dropdown-item" href="#">Bachelor</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Master</a>
+                                    <a class="dropdown-item" href="/empty.hmlt?title=Master">Master</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Continuing education</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Continuing+education">Continuing education</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Doctorate</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Doctorate">Doctorate</a>
                                 </li>
                             </ul>
                         </li>
@@ -91,22 +84,20 @@
                                 aria-expanded="false">Industry &amp; partners</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-express">
                                 <li>
-                                    <a class="dropdown-item" href="#">Public relations</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Commercialization</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Commercialization">Commercialization</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Sponsors &amp; partners</a>
+                                    <a class="dropdown-item" href="/empty.html?title=Sponsors+%26+partners">Sponsors &amp; partners</a>
                                 </li>
                             </ul>
                         </li>
                     </ul>
                     <ur class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/login.html">Login
-                                <span class="sr-only">(current)</span>
-                            </a>
+                            <a class="nav-link" href="/login.html">Login</a>
                         </li>
                     </ur>
                 </div>
@@ -183,7 +174,7 @@
     </main>
 
     <footer class="container-fluid bg-dark mt-4 footer">
-        <div class="container text-center py-4">
+        <div class="container text-center py-3">
             <div class="row justify-content-around">
                 <a class="col-12 col-md mr-3 text-white" href="#">About</a>
                 <a class="col-12 col-md mr-3 text-white" href="#">Contact us</a>
