--- a/src/empty.html
+++ b/src/empty.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <header class="container-fluid d-none d-lg-block mt-4 mb-3 header">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="media">
                 <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
