--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="d-flex flex-column bg-light">
-    <header class="container-fluid d-none d-lg-block mt-4 mb-3 header">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="media">
                 <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
@@ -35,8 +35,7 @@
                 <div class="collapse navbar-collapse" id="nav-bar-content">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Homepage
-                            </a>
+                            <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/empty.html?title=The+institue">The institute</a>
@@ -106,10 +105,10 @@
         </div>
     </nav>
 
-    <main class="container mt-4 main">
+    <main class="container main">
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
-                <section class="p-4 mr-lg-3 bg-white news">
+                <section class="p-4 mt-4 mr-lg-3 bg-white news">
                     <h1 class="text-primary mb-4">News &amp; events</h1>
                     <article class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
@@ -160,7 +159,7 @@
                 </section>
             </div>
             <div class="col-12 col-lg-6">
-                <section class="p-4 mt-4 mt-lg-0 bg-white studies">
+                <section class="p-4 mt-4 bg-white studies">
                     <h1 class="text-primary mb-4">Studies</h1>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
