--- a/src/login.html
+++ b/src/login.html
@@ -8,8 +8,8 @@
     <title>Lorem Ipsum Institute of Technolgoy</title>
 </head>
 
-<body class="d-flex flex-column bg-light">
-    <header class="container-fluid d-none d-lg-block mt-4 mb-3 header">
+<body class="bg-light">
+    <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="media">
                 <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg" alt="University logo">
@@ -105,9 +105,9 @@
         </div>
     </nav>
 
-    <main class="container main mt-4">
+    <main class="container main">
         <div class="row no-gutters">
-            <section class="col-12 col-md-6 col-lg-5 login">
+            <section class="col-12 col-md-5 mt-4 login">
                 <div class="p-4 mr-md-3 bg-white">
                     <h1 class="text-primary mb-4">Login</h1>
                     <form>
@@ -126,7 +126,7 @@
                     </form>
                 </div>
             </section>
-            <section class="col-12 col-md-6 col-lg-7 register">
+            <section class="col-12 col-md-7 mt-4 register">
                 <div class="p-4 bg-white">
                     <h1 class="text-primary mb-4">Create new account</h1>
                     <form>
