--- a/src/empty.html
+++ b/src/empty.html
@@ -114,11 +114,11 @@
     <footer class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="#">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </footer>
