--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/server-farm.jpg" alt="Photo of a server farm">
                         <div class="media-body">
                             <h2 class="text-info mt-0 mb-2">
-                                <a href="#"> Respondeat totidem verbis</a>
+                                <a href="/empty.html?title=Article"> Respondeat totidem verbis</a>
                             </h2>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. An me, inquam, nisi te audire vellem, censes haec dicturum fuisse?
@@ -129,7 +129,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
                         <div class="media-body">
                             <h2 class="text-info mt-0 mb-2">
-                                <a href="#">At iam decimum annum in spelunca iacet</a>
+                                <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
                             </h2>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
@@ -144,7 +144,7 @@
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
                         <div class="media-body">
                             <h2 class="text-info mt-0 mb-2">
-                                <a href="#">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
+                                <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
                             </h2>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
@@ -164,13 +164,13 @@
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
                         <li>
-                            <a href="#">Bachelor programmes</a>
+                            <a href="/empty.html?title=Bachelor">Bachelor programmes</a>
                         </li>
                         <li>
-                            <a href="#">Master programmes</a>
+                            <a href="/empty.html?title=Bachelor">Master programmes</a>
                         </li>
                         <li>
-                            <a href="#">Continuing education programmes</a>
+                            <a href="/empty.html?title=Continuing+education">Continuing education programmes</a>
                         </li>
                     </ul>
                 </section>
@@ -179,25 +179,25 @@
                     <h1 class="text-primary mb-4">Researches</h1>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
-                        <a href="#">Doctorial programmes</a>
+                        <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
                     </p>
                     <p class="font-weight-bold">Latest publications</p>
                     <ul class="list-unstyled ml-3">
                         <li>
-                            <a href="#">Tuo vero id quidem, inquam, arbitratu</a>
+                            <a href="/empty.html?title=Article">Tuo vero id quidem, inquam, arbitratu</a>
                         </li>
                         <li>
-                            <a href="#">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
+                            <a href="/empty.html?title=Article">Quantum Aristoxeni ingenium consumptum videmus in musicis</a>
                         </li>
                         <li>
-                            <a href="#">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
+                            <a href="/empty.html?title=Article">Mihi quidem Antiochum, quem audis, satis belle videris attendere</a>
                         </li>
                         <li>
-                            <a href="#">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
+                            <a href="/empty.html?title=Article">Nec enim figura corporis nec ratio excellens ingenii humani significat ad unam hanc rem natum
                                 hominem, ut frueretur voluptatibus</a>
                         </li>
                         <li>
-                            <a href="#">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
+                            <a href="/empty.html?title=Article">Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia</a>
                         </li>
                     </ul>
                 </section>
@@ -208,15 +208,14 @@
     <footer class="container-fluid bg-dark mt-4 footer">
         <div class="container text-center py-3">
             <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="#">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="#">Privacy policy</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=About">About</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Contact+us">Contact us</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Help">Help</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Terms+of+services">Terms of service</a>
+                <a class="col-12 col-md mr-3 text-white" href="/empty.html?title=Privacy+policy">Privacy policy</a>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
