Refined empty page

--- a/src/empty.html
+++ b/src/empty.html
@@ -106,8 +106,8 @@
     </nav>
 
     <main class="container mt-4 text-center main">
-        <h1 class="text-primary py-4 mb-4" id="empty-place-holder"></h1>
-        <p class="text-secondary">This page is currently under construction...</p>
+        <h1 class="text-primary py-4 mb-4" id="title-placeholder">Loading...</h1>
+        <p class="text-secondary" id="text-placeholder"></p>
     </main>
 
 
