--- a/src/login.html
+++ b/src/login.html
@@ -174,7 +174,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="agreement" id="register-agreement">
                                 <label class="form-check-label" for="register-agreement">I agree with the
-                                    <a href="/empty.html?title=Terms+of+services">terms of services</a> and the
+                                    <a href="/empty.html?title=Terms+of+services">terms of service</a> and the
                                     <a href="/empty.html?title=Privacy+policy">privacy policy</a>.</label>
                             </div>
                         </div>
